This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

2.5.3 (UNRELEASED):
-------------------
 * data/apportcheckresume: Open report file in binary mode. (LP: #1040353)
 * packaging-apt-dpkg.py: When throwing ValueErrors, show the non-existing
   package name. This makes it easier to debug such crashes.

2.5.2 (2012-09-17):
-------------------
 * test/run: Ignore root_info_wrapper with pyflakes.
 * packaging-apt-dpkg.py: Add recommended packages to "Dependencies:" field.
   (LP: #1014428)
 * test_hookutils.py, test_in_session_of_problem(): Use year 2038 for a future
   date instead of 2211, as current Python 3.2 now crashes with an
   OverflowError on 32 bit machines with later years.
 * Fix crash on broken .desktop files. (LP: #1039889)
 * apport-gtk: For console program crashes, say "stopped" instead of "closed".
   Add a subtitle label with a hint about hanging programs. Thanks Matt Price
   and Matthew Paul Thomas!
 * report.py: Fix crash on determination of Python module path when examining a
   crash of "python -m ...".
 * apport-kde: Fix crash with undefined QString under Python 3. Thanks Jonathan
   Riddell! (LP: #1028984)
 * launchpad.py: Add missing "Pre-release Freeze" status. Thanks Brian Murray!
 * report.py, _check_bug_pattern(): Fix bug pattern matching against binary
   values. Thanks Brian Murray for the original patch. (LP: #1016380)

2.5.1 (2012-08-22):
-------------------
 * data/root_info_wrapper: Turn into a real file, a symlink can cause some
   packaging problems.

2.5 (2012-08-22):
-------------------
Bug fixes:
 * test_recoverable_problem.py: Fix test for calling test runner with absolute
   path.
 * packaging-apt-dpkg.py: Fix crash on writing virtual_mapping.db when running
   with --sandbox-dir and -S system or giving no --cache.
 * REThread.py: Fix re-raising of exceptions in Python 3. Thanks Martin
   Packman! (LP: #1024836)